SpinBox: don't call valueFromText when non-editable

If there are custom values like 00:00:00 for time and valueFromText
is not implemented, tab navigation sets the value to 0, because the
default implementation cannot evaluate it.

Change-Id: I0384a2015b2c2a4dc2ee0e57f1ece410c339838e
Task-number: QTBUG-56215
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>